objects/wkcc__CommandCenterMapping__c.object
<CustomObject>
    <fields>
        <fullName>wkcc__MappedValueName__c</fullName>
        <description>The name property of the stored Id from the lookup type</description>
        <inlineHelpText>The name property of the stored Id from the lookup type</inlineHelpText>
        <label>Mapped Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__MappedValue__c</fullName>
        <label>Mapped Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__MappingKey__c</fullName>
        <label>Mapping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__MappingTypeId__c</fullName>
        <description>18 Character Id of associated MappingType__mdt</description>
        <label>Mapping Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__MappingType__c</fullName>
        <label>Mapping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Command Center Mapping</label>
    <listViews>
        <fullName>wkcc__All</fullName>
        <columns>NAME</columns>
        <columns>wkcc__MappedValue__c</columns>
        <columns>wkcc__MappedValueName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>wkcc__MappingKey__c</columns>
        <columns>wkcc__MappingTypeId__c</columns>
        <columns>wkcc__MappingType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mapped Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Command Center Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>